# zpr-scan-search

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  wstepna.md
.github/actions/setup-deps/: action.yml
.github/workflows/: CI.yml
docs/: intro.md  skeleton-instructions.md
python/: main.py  search.py
python/scan_search/: __init__.py  scan_search.pyi
python/tests/: test_all.py
scripts/: setup-gitlab.sh
src/: constants.rs  error.rs  filetype.rs  lib.rs  searcher.rs  supported_file.rs
src/cli/: cli.py  filetype.rs  mod.rs  scanner.rs  search.py
src/cli/tests/: filetype.rs  mod.rs  scanner.rs
src/dir_utils/tests/: scanner.rs
src/file/: loader.rs  mod.rs
src/file/file/: Cargo.toml
src/file/file/src/: file.rs
src/file/tests/: file.rs  mod.rs
src/ocr/: mod.rs  tesseract_engine.rs  utils.rs
src/ocr/tests/: mod.rs
src/pdf/: mod.rs
src/pdf/tests/: pdf_extractor.rs
src/searcher/: mod.rs
src/sem_searcher/: mod.rs
src/sem_searcher/tests/: fastembed_tests.rs  fastmebed.rs  mod.rs
src/text_cacher/: Cargo.toml  cache_writer.rs  codec.rs  embeddings.rs  file_fingerprint.rs  local_cache.rs  mod.rs  word_map.rs
src/text_cacher/src/: text_cacher.rs
src/text_cacher/tests/: file_fingerprint.rs  local_cache.rs  mod.rs  text_cacher.rs  word_map.rs  writer.rs
src/text_encoder/: fastembed.rs  mod.rs  rust_bert.rs
src/text_encoder/tests/: mod.rs
src/text_extractor/: image_extractor.rs  mod.rs  pdf_extractor.rs  universal_extractor.rs
src/text_extractor/tests/: mod.rs  pdf_extractor.rs  universal_extractor.rs
src/text_searcher/: mod.rs
src/text_searcher/tests/: mod.rs
