[package]
name = "scan_search"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "scan_search"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.28.2"
serde_json = "1.0.149"
tempfile = "3.27.0"
filetime = "0.2.27"
thiserror = "2.0"
